update openAPI, added images to articles and users in populate, and some minor changes in route logic
